--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,77 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Tareas por Hacer: {{response.counter2}}</h2>
-    <ul>
-        {% for task in response.incompleted %}
-            <li>
-                {{task.name}}
-            </li>
-        {% endfor %}
-    </ul>
-    <h2>Tareas Finalizadas: {{response.counter1}}</h2>
-    <ul>
-        {% for task in response.completed %}
-            <li>
-                {{task.name}}
-            </li>
-        {% endfor %}
-    </ul>
-    <div>
+    <div class="d-flex justify-content-center p-2">
         <form method="post">
-            <div>
-                <input type="text" name="name" id="name" placeholder="Escribe una tarea">
-            </div>
-            <div>
-                <button type="submit">Añadir Tarea</button>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <input type="hidden" name="_method" value="POST">
+                    <input class="form-control" required type="text" name="name" id="name" placeholder="Escribe una tarea">
+                </div>
+                <div class="col-auto">
+                    <button class="btn btn-outline-success" type="submit">Añadir Tarea</button>
+                </div>
             </div>
         </form>
+    </div>
+
+
+    <div class="d-flex justify-content-evenly p-2">
+        <div class="d-flex flex-column">
+            <h5>Tareas por Realizar: {{response.counter2}}</h5>
+            <ul class="list-group">
+                {% for task in response.incompleted %}
+                    <div class="list-group-item">
+                        <div class="d-flex flex-row align-items-center">
+                            <div class="flex-grow-1 flex-fill text-start pe-4">
+                                <p class="h6 m-0">{{task.name}}</p>
+                            </div>
+                            <form method="post" class="ps-4">
+                                    <input type="hidden" name="name" value="{{task.name}}">
+                                    <input type="hidden" name="_method" value="PUT">
+                                    <button type="submit" class="btn btn-outline-success border-0 rounded-circle p-2">
+                                        <i class="bi bi-check2-circle d-flex align-items-center" style="font-size: 1.8rem;"></i>
+                                    </button>
+                            </form>
+                            <form method="post" class="ps-1">
+                                <input type="hidden" name="name" value="{{task.name}}">
+                                <input type="hidden" name="_method" value="DELETE">
+                                <button type="submit" class="btn btn-outline-danger border-0 rounded-circle p-2">
+                                    <i class="bi bi-trash d-flex align-items-center" style="font-size: 1.8rem;"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="d-flex flex-column">
+            <h5>Tareas Finalizadas: {{response.counter1}}</h5>
+            <ul class="list-group">
+                {% for task in response.completed %}
+                    <div class="list-group-item">
+                        <div class="d-flex flex-row align-items-center">
+                            <div class="flex-grow-1 flex-fill text-start pe-4">
+                                <p class="h6 m-0">{{task.name}} </p>
+                            </div>
+                            <form method="post" class="ps-4">
+                                    <input type="hidden" name="name" value="{{task.name}}">
+                                    <input type="hidden" name="_method" value="PUT">
+                                    <button type="submit" class="btn btn-outline-danger border-0 rounded-circle p-2">
+                                        <i class="bi bi-x-circle d-flex align-items-center" style="font-size: 1.8rem;"></i>
+                                    </button>
+                            </form>
+                            <!-- <form method="post" class="ps-1">
+                                <input type="hidden" name="name" value="{{task.name}}">
+                                <input type="hidden" name="_method" value="DELETE">
+                                <button type="submit" class="btn btn-outline-danger border-0 rounded-circle p-2">
+                                    <i class="bi bi-trash d-flex align-items-center" style="font-size: 1.8rem;"></i>
+                                </button>
+                            </form> -->
+                        </div>
+                    </div>
+                    
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 {% endblock%}
